--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "framework": "nextjs",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
-  "regions": ["iad1"],
   "functions": {
-    "app/**/*.{js,ts,tsx}": {
+    "src/app/**/*.{js,ts,tsx}": {
       "maxDuration": 30
     }
   },
@@ -27,12 +26,6 @@
           "value": "1; mode=block"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/en"
     }
   ]
 } 
