--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "autoprefixer": "^10.4.21",
+    "critters": "^0.0.23",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
