--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.13",
+    "@types/three": "^0.178.0",
+    "animejs": "^4.0.2",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
@@ -22,7 +25,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
